# xconverters

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
xconverters/: __init__.py  conv_utils.py  convert_lattices.py
xconverters/bmad/: bmad_element_conversion.py
xconverters/bmad_utils/: bmad_element_conversion.py
xconverters/cpymad/: convert_cpymad_elements.py  cpymad_element_conversion.py  cpymad_lattice_conversion.py  cpymad_properties_mimimal.py  element_from_cpymad.py
xconverters/cpymad_utils/: convert_cpymad_elements.py  convert_cpymad_lattices.py  element_to_cpymad.py
xconverters/pyat/: convert_pyat_elements.py  element_from_pyat.py  element_to_pyat.py  pyat_element_conversion.py  pyat_lattice_conversion.py
xconverters/pyat_utils/: convert_pyat_elements.py  element_to_pyat.py  pyat_lattice_conversion.py
xconverters/sad/: sad_lattice_conversion.py
xconverters/sad_utils/: convert_sad_lattices.py  sad_lattice_conversion.py  temp.job  temporary_mad.seq.seq
xconverters/tests/: log.madx
xconverters/tests/test_elements/: log.madx  test_bend.py  test_cpymad_elements.py  test_element_cpymad.py  test_element_cpymad_elettra.py  test_octupole.py  test_pyat_elements.py  test_quadrupole.py  test_rfcavity.py  test_sextupole.py
xconverters/tests/test_elettra/: check_elettra_pyat.py  log.madx  test_element_cpymad_elettra.py  test_elettra_cpymad.py  test_elettra_import.py  (+1 more)
xconverters/xtrack/: xtrack_lattice_conversion.py
xconverters/xtrack_utils/: convert_xtrack_elements.py  convert_xtrack_lattices.py  xtrack_element_conversion.py
(+22 files in other folders)
