[project]
name = "xconverters"
version = "0.1.0"
description = "Package to translate accelerator lattices between different simulation codes"
authors = [
    {name = "Felix Carlier", email = "fcarlier@cern.ch"},
    ]
license = "MIT"
requires-python = ">=3.8"

[tool.hatch.metadata]
allow-direct-references = true

dependencies = [
"numpy >= 1.19.0", 
"pandas >= 1.0",
"xtrack @ git+https://github.com/xsuite/xtrack.git@main",
"xdeps @ git+https://github.com/xsuite/xdeps.git@main",
"xsequence @ git+https://github.com/fscarlier/xsequence.git@master",
"cpymad >= 1.8.1", 
"lark >= 1.1.2", 
"rich >= 12.4.4", 
"accelerator-toolbox >= 0.2.2", 
"scipy >= 1.5.0", 
"pytest >= 7.1.2", 
"Sphinx >= 5.0.2", 
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
